# ArcticRoute-Planner

./: .dockerignore  .env.example  .gitignore  .ruff.toml  ACCEPTANCE_TEST_REPORT.md  AIS_GRID_SIGNATURE_IMPLEMENTATION_SUMMARY.md  AIS_GRID_SIGNATURE_QUICK_REFERENCE.md  AIS_GRID_SIGNATURE_VERIFICATION_REPORT.md  AIS_PHASE1_COMPLETION_CERTIFICATE.txt  AIS_PHASE1_IMPLEMENTATION_SUMMARY.md  AIS_PHASE1_INDEX.md  AIS_PHASE1_QUICK_START.md  AIS_PHASE1_VERIFICATION_REPORT.md  AIS_PHASE1_中文总结.md  AIS_REFACTOR_SUMMARY.md  BUGFIX_REPORT.md  BUG_FIX_REPORT.md  CALIB_SPEED_EXP_COMPLETION_REPORT.md  CALIB_SPEED_EXP_QUICK_START.md  CALIB_SPEED_EXP_SUMMARY_CN.md  CHANGES_DIFF.md  CHANGES_SUMMARY.md  CHECKLIST.md  CMEMS_C3_COMPLETION_CERTIFICATE.txt  CMEMS_C3_DELIVERY_SUMMARY.md  CMEMS_DEPLOYMENT_GUIDE.md  CMEMS_FILES_MANIFEST.md  CMEMS_INDEX.md  CMEMS_PLANNER_INTEGRATION_SUMMARY.md  CMEMS_QUICK_REFERENCE.md  CMEMS_QUICK_START.md  CMEMS_WORK_SUMMARY_CN.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  COPERNICUS_SETUP_REPORT.md  DELIVERY_REPORT.md  DELIVERY_SUMMARY.txt  DEVELOPMENT_NOTES_ICE_CLASS.md  Dockerfile  (+304 more)
ArcticRoute/: .gitignore  README.md  exceptions.py  paths.py  requirements.txt  run_ai_demo.ps1  run_demo.ps1  settings.py  tmp_head.json  ui_app.py
arcticroute/: __init__.py
configs/: audit.yaml  cache_policy.yaml  constraints.yaml  edl_dataset.yaml  edl_train.yaml  feature_flags.yaml  p1_cost_202412.yaml  p1_pipeline_202412.yaml  p1_route_202412.yaml  paths.yaml  prior_transformer.yaml  replan.yaml  review.yaml  risk_fuse_202412.yaml  scenarios.yaml  (+1 more)
(+681 files in other folders)
