[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arcticroute"
version = "0.1.0"
description = "Minimal ArcticRoute demo with CLI and Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
homepage = "https://example.com/arcticroute"
repository = "https://example.com/arcticroute.git"
